# expt_thu_eact_50_chl

./: .gitignore  README.md  navigate_expt.md  pyproject.toml
experiments/260703_1/: denoise_hw.py  expt_summary.md  run_npy_to_mp4.py  実験概要.md
experiments/260706_1/: expt_summary.md  make_denoised_dataset.py
experiments/260706_2/: expt_summary.md  make_dataset.py  result_v3_ls_cos.txt  train.py
experiments/260706_3/: expt_summary.md  make_denoised_dataset.py
experiments/260706_4/: expt_summary.md  make_dataset.py  result_v3_ls_cos.txt  train.py
experiments/260706_5/: expt_summary.md  make_denoised_dataset.py
experiments/260706_6/: expt_summary.md  make_dataset.py  result_v3_ls_cos.txt
experiments/260706_7/: expt_summary.md  make_denoised_dataset.py  run_npy_to_mp4.py
experiments/260706_8/: expt_summary.md  make_dataset.py  result_v3_ls_cos.txt
experiments/260707_1/: expt_summary.md  make_dataset.py  result.txt  run_correct_data_analyzer.py  train.py
experiments/260707_2/: denoise_metrics.json  expt_summary.md  make_denoised_dataset.py  ranking_reduction_rate.json  run_analyze_metrics.py  run_npy_to_mp4.py
experiments/260707_3/: expt_summary.md  make_dataset.py  result_ch3.txt  train.py
experiments/260707_4/: expt_summary.md  make_dataset.py  result_ch4.txt  run_correct_data_analyzer.py  run_error_visualizer.py  train.py
experiments/260708_1/: expt_summary.md  generate_mapping_videos.py  generate_retry_videos.py
experiments/260709_1/: expt_summary.md  result_cbam.txt  train.py
experiments/260709_2/: train.py  (+4 more)
utils/: download_from_dropbox.sh
(+166 files in other folders)
