[project]
name = "expt-thu-eact-50-chl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "kcsenobi", email = "takumi.nose.hs@kyocera.jp" }
]
requires-python = ">=3.12.13"
dependencies = [
    "gdown>=6.1.0",
    "matplotlib>=3.11.0",
    "numba>=0.66.0",
    "numpy>=2.4.6",
    "opencv-python>=5.0.0.93",
    "thop>=0.1.1.post2209072238",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "tqdm>=4.68.3",
]

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"
